Fix: break in bg gradient

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+body, html, #root {
   margin: 0;
   padding: 0;
   font-family: 'Anonymous Pro', monospace;
